# anti_debug

./: README.md
app/: build.gradle
app/src/androidTest/java/com/yyt/anti_debug/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mprop.c  native-lib.c  properties.c
app/src/main/cpp/include/: properties.h
app/src/main/java/com/yyt/anti_debug/: BootReceiver.java  MainActivity.java  OwnService.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yyt/anti_debug/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
